--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -18,6 +18,7 @@
         <%= f.label :Name %>
         <%= f.text_field :name, class: "form-control name" %>
       </div>
+      <!--クリックするとエラー-->
      <div class="form-group">
         <%= f.label :image %>
         <%= f.file_field :profile_image, class: "form-control-file user_image", accept: 'image/*' %>
