--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -60,10 +60,10 @@
                <% @users.each do |user| %>
                     <tr>
                        <td>
-                       <%= image_tag @user.get_profile_image(100,100) %>
+                       <%= image_tag user.get_profile_image(100,100) %>
                        </td>
                        <td><%= user.name %></td>
-                       <td><%= link_to "Show", user_path(@user) %></td>
+                       <td><%= link_to "Show", user_path(user) %></td>
                    </tr>
                 <% end %>
         </tbody>
